--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Colorado Wang</title>
 </head>
 <body>
-    <h1>Hi There</h1>
-    <p>This is colorado wang.</p>
+    <h1>Hello</h1>
+    <p>Welcome to colorado wang.</p>
+    <p>What is colorado wang you ask?</p>
 </body>
 </html>
